[project]
name = "bandits-highway"
version = "0.1.0"
description = "Entraînement d'algorithmes de bandits dans l'environnement highway de Gym."
authors = [
    {name = "Cheikhou Akhmed KANE"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "numpy (>=2.4.0,<3.0.0)",
    "gymnasium (>=1.2.3,<2.0.0)",
    "highway-env (>=1.10.2,<2.0.0)",
    "pygame (>=2.6.1,<3.0.0)",
    "tqdm (>=4.67.1,<5.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "ipykernel (>=7.1.0,<8.0.0)"
]
